# baka-skript

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: csv.hpp  dir.hpp  file.hpp  threadPool.hpp  time.hpp  timeparse.hpp  types.hpp  wildnav.hpp
src/: csv.cpp  dir.cpp  file.cpp  main.cpp  timeparse.cpp  wildnav.cpp
src/skript/: csv.cpp  dir.cpp  file.cpp  file.hpp  time.cpp  wildnav.cpp
